# volctl

./: .editorconfig  .gitignore  README.md  build.gradle.kts  settings.gradle.kts
buildConfig/: detekt.yml
buildSrc/src/main/kotlin/: Lib.kt  Plugin.kt
gradle/: libs.versions.toml
native/: .gitignore  CMakeLists.txt  volctl-alsa.cpp  volctl-win.cpp  volctl.cpp
src/main/java/net/bjoernpetersen/volctl/: StringUtils.java  VolumeControl.java
src/main/kotlin/net/bjoernpetersen/volctl/: VolumeControl.kt
src/test/java/net/bjoernpetersen/volctl/: StringUtilsTest.java  VolumeControlTest.java
src/test/kotlin/net/bjoernpetersen/volctl/: VolumeControlTest.kt
